fix contact page alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -509,7 +509,7 @@ img {
  border-radius: 25px;
   border: 2px solid #374040;
   padding: 20px;
-  width: 590px;
+  width: 640px;
   height: 100px;
   box-sizing: border-box;
 }
